CC/4th/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On VAR shift to state 1
-- On programa shift to state 15
-- On list(declaracao) shift to state 16
-- On declaracoes shift to state 17
-- On declaracao shift to state 176
-- On FUNCAO reduce production list(declaracao) -> 

State 1:
declaracao -> VAR . separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG [ WHILE VAR SWITCH RETURN PRINT LITSTRING LITREAL LITINT LITCHAR LITBOOL LEIA IF ID FUNCAO FOR FCHAVE APAR ]
-- On ID shift to state 2
-- On separated_nonempty_list(VIRG,ID) shift to state 5

State 2:
separated_nonempty_list(VIRG,ID) -> ID . [ DOISPONTOS ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ DOISPONTOS ]
-- On VIRG shift to state 3
-- On DOISPONTOS reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 3:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ DOISPONTOS ]
-- On ID shift to state 2
-- On separated_nonempty_list(VIRG,ID) shift to state 4

State 4:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ DOISPONTOS ]
-- On DOISPONTOS reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 5:
declaracao -> VAR separated_nonempty_list(VIRG,ID) . DOISPONTOS tipo_simples PONTOVIRG [ WHILE VAR SWITCH RETURN PRINT LITSTRING LITREAL LITINT LITCHAR LITBOOL LEIA IF ID FUNCAO FOR FCHAVE APAR ]
-- On DOISPONTOS shift to state 6

State 6:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS . tipo_simples PONTOVIRG [ WHILE VAR SWITCH RETURN PRINT LITSTRING LITREAL LITINT LITCHAR LITBOOL LEIA IF ID FUNCAO FOR FCHAVE APAR ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On REAL shift to state 9
-- On INTEIRO shift to state 10
-- On CHAR shift to state 11
-- On BOOL shift to state 12
-- On tipo_simples shift to state 13

State 7:
tipo_simples -> VOID . [ PONTOVIRG FPAR ATRIB ]
-- On PONTOVIRG reduce production tipo_simples -> VOID 
-- On FPAR reduce production tipo_simples -> VOID 
-- On ATRIB reduce production tipo_simples -> VOID 

State 8:
tipo_simples -> STRING . [ PONTOVIRG FPAR ATRIB ]
-- On PONTOVIRG reduce production tipo_simples -> STRING 
-- On FPAR reduce production tipo_simples -> STRING 
-- On ATRIB reduce production tipo_simples -> STRING 

State 9:
tipo_simples -> REAL . [ PONTOVIRG FPAR ATRIB ]
-- On PONTOVIRG reduce production tipo_simples -> REAL 
-- On FPAR reduce production tipo_simples -> REAL 
-- On ATRIB reduce production tipo_simples -> REAL 

State 10:
tipo_simples -> INTEIRO . [ PONTOVIRG FPAR ATRIB ]
-- On PONTOVIRG reduce production tipo_simples -> INTEIRO 
-- On FPAR reduce production tipo_simples -> INTEIRO 
-- On ATRIB reduce production tipo_simples -> INTEIRO 

State 11:
tipo_simples -> CHAR . [ PONTOVIRG FPAR ATRIB ]
-- On PONTOVIRG reduce production tipo_simples -> CHAR 
-- On FPAR reduce production tipo_simples -> CHAR 
-- On ATRIB reduce production tipo_simples -> CHAR 

State 12:
tipo_simples -> BOOL . [ PONTOVIRG FPAR ATRIB ]
-- On PONTOVIRG reduce production tipo_simples -> BOOL 
-- On FPAR reduce production tipo_simples -> BOOL 
-- On ATRIB reduce production tipo_simples -> BOOL 

State 13:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples . PONTOVIRG [ WHILE VAR SWITCH RETURN PRINT LITSTRING LITREAL LITINT LITCHAR LITBOOL LEIA IF ID FUNCAO FOR FCHAVE APAR ]
-- On PONTOVIRG shift to state 14

State 14:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG . [ WHILE VAR SWITCH RETURN PRINT LITSTRING LITREAL LITINT LITCHAR LITBOOL LEIA IF ID FUNCAO FOR FCHAVE APAR ]
-- On WHILE reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On VAR reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On SWITCH reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On RETURN reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On PRINT reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On LITSTRING reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On LITREAL reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On LITINT reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On LITCHAR reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On LITBOOL reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On LEIA reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On IF reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On ID reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On FUNCAO reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On FOR reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On FCHAVE reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 
-- On APAR reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples PONTOVIRG 

State 15:
programa' -> programa . [ # ]
-- On # accept programa

State 16:
declaracoes -> list(declaracao) . [ WHILE SWITCH RETURN PRINT LITSTRING LITREAL LITINT LITCHAR LITBOOL LEIA IF ID FUNCAO FOR FCHAVE APAR ]
-- On WHILE reduce production declaracoes -> list(declaracao) 
-- On SWITCH reduce production declaracoes -> list(declaracao) 
-- On RETURN reduce production declaracoes -> list(declaracao) 
-- On PRINT reduce production declaracoes -> list(declaracao) 
-- On LITSTRING reduce production declaracoes -> list(declaracao) 
-- On LITREAL reduce production declaracoes -> list(declaracao) 
-- On LITINT reduce production declaracoes -> list(declaracao) 
-- On LITCHAR reduce production declaracoes -> list(declaracao) 
-- On LITBOOL reduce production declaracoes -> list(declaracao) 
-- On LEIA reduce production declaracoes -> list(declaracao) 
-- On IF reduce production declaracoes -> list(declaracao) 
-- On ID reduce production declaracoes -> list(declaracao) 
-- On FUNCAO reduce production declaracoes -> list(declaracao) 
-- On FOR reduce production declaracoes -> list(declaracao) 
-- On FCHAVE reduce production declaracoes -> list(declaracao) 
-- On APAR reduce production declaracoes -> list(declaracao) 

State 17:
programa -> declaracoes . nonempty_list(declaracao_funcao) comando_expressao EOF [ # ]
-- On FUNCAO shift to state 18
-- On nonempty_list(declaracao_funcao) shift to state 182
-- On declaracao_funcao shift to state 185

State 18:
declaracao_funcao -> FUNCAO . ID APAR parametros FPAR DOISPONTOS tipo_simples ATRIB ACHAVE declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On ID shift to state 19

State 19:
declaracao_funcao -> FUNCAO ID . APAR parametros FPAR DOISPONTOS tipo_simples ATRIB ACHAVE declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On APAR shift to state 20

State 20:
declaracao_funcao -> FUNCAO ID APAR . parametros FPAR DOISPONTOS tipo_simples ATRIB ACHAVE declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On ID shift to state 2
-- On separated_nonempty_list(VIRG,ID) shift to state 21
-- On separated_nonempty_list(PONTOVIRG,declaracao_args) shift to state 24
-- On parametros shift to state 25
-- On loption(separated_nonempty_list(PONTOVIRG,declaracao_args)) shift to state 178
-- On declaracao_args shift to state 179
-- On FPAR reduce production loption(separated_nonempty_list(PONTOVIRG,declaracao_args)) -> 

State 21:
declaracao_args -> separated_nonempty_list(VIRG,ID) . DOISPONTOS tipo_simples [ PONTOVIRG FPAR ]
-- On DOISPONTOS shift to state 22

State 22:
declaracao_args -> separated_nonempty_list(VIRG,ID) DOISPONTOS . tipo_simples [ PONTOVIRG FPAR ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On REAL shift to state 9
-- On INTEIRO shift to state 10
-- On CHAR shift to state 11
-- On BOOL shift to state 12
-- On tipo_simples shift to state 23

State 23:
declaracao_args -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples . [ PONTOVIRG FPAR ]
-- On PONTOVIRG reduce production declaracao_args -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples 
-- On FPAR reduce production declaracao_args -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo_simples 

State 24:
loption(separated_nonempty_list(PONTOVIRG,declaracao_args)) -> separated_nonempty_list(PONTOVIRG,declaracao_args) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(PONTOVIRG,declaracao_args)) -> separated_nonempty_list(PONTOVIRG,declaracao_args) 

State 25:
declaracao_funcao -> FUNCAO ID APAR parametros . FPAR DOISPONTOS tipo_simples ATRIB ACHAVE declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On FPAR shift to state 26

State 26:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR . DOISPONTOS tipo_simples ATRIB ACHAVE declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On DOISPONTOS shift to state 27

State 27:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS . tipo_simples ATRIB ACHAVE declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On REAL shift to state 9
-- On INTEIRO shift to state 10
-- On CHAR shift to state 11
-- On BOOL shift to state 12
-- On tipo_simples shift to state 28

State 28:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS tipo_simples . ATRIB ACHAVE declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On ATRIB shift to state 29

State 29:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS tipo_simples ATRIB . ACHAVE declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On ACHAVE shift to state 30

State 30:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS tipo_simples ATRIB ACHAVE . declaracoes list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On VAR shift to state 1
-- On list(declaracao) shift to state 16
-- On declaracoes shift to state 31
-- On declaracao shift to state 176
-- On WHILE reduce production list(declaracao) -> 
-- On SWITCH reduce production list(declaracao) -> 
-- On RETURN reduce production list(declaracao) -> 
-- On PRINT reduce production list(declaracao) -> 
-- On LITSTRING reduce production list(declaracao) -> 
-- On LITREAL reduce production list(declaracao) -> 
-- On LITINT reduce production list(declaracao) -> 
-- On LITCHAR reduce production list(declaracao) -> 
-- On LITBOOL reduce production list(declaracao) -> 
-- On LEIA reduce production list(declaracao) -> 
-- On IF reduce production list(declaracao) -> 
-- On ID reduce production list(declaracao) -> 
-- On FOR reduce production list(declaracao) -> 
-- On FCHAVE reduce production list(declaracao) -> 
-- On APAR reduce production list(declaracao) -> 

State 31:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS tipo_simples ATRIB ACHAVE declaracoes . list(comando) FCHAVE [ LITSTRING LITREAL LITINT LITCHAR LITBOOL ID FUNCAO APAR ]
-- On WHILE shift to state 32
-- On SWITCH shift to state 83
-- On RETURN shift to state 92
-- On PRINT shift to state 99
-- On LITSTRING shift to state 34
-- On LITREAL shift to state 35
-- On LITINT shift to state 36
-- On LITCHAR shift to state 37
-- On LITBOOL shift to state 38
-- On LEIA shift to state 104
-- On IF shift to state 109
-- On ID shift to state 39
-- On FOR shift to state 114
-- On APAR shift to state 41
-- On variavel shift to state 125
-- On list(comando) shift to state 174
-- On expressao shift to state 135
-- On comando_while shift to state 137
-- On comando_se shift to state 138
-- On comando_saida shift to state 139
-- On comando_return_vazio shift to state 140
-- On comando_return shift to state 141
-- On comando_incremento shift to state 142
-- On comando_for shift to state 143
-- On comando_expressao shift to state 144
-- On comando_entrada shift to state 145
-- On comando_decremento shift to state 146
-- On comando_case shift to state 147
-- On comando_atribuicao shift to state 148
-- On comando shift to state 149
-- On chamada shift to state 48
-- On FCHAVE reduce production list(comando) -> 

State 32:
comando_while -> WHILE . APAR expressao FPAR ACHAVE list(comando) FCHAVE [ WHILE SWITCH RETURN PRINT LITSTRING LITREAL LITINT LITCHAR LITBOOL LEIA IF ID FOR FCHAVE BREAK APAR ]
-- On APAR shift to state 33

State 33:
comando_while -> WHILE APAR . expressao FPAR ACHAVE list(comando) FCHAVE [ WHILE SWITCH RETURN PRINT LITSTRING LITREAL LITINT LITCHAR LITBOOL LEIA IF ID FOR FCHAVE BREAK APAR ]
-- On LITSTRING shift to state 34
-- On LITREAL shift to state 35
-- On LITINT shift to state 36
-- On LITCHAR shift to state 37
-- On LITBOOL shift to state 38
-- On ID shift to state 39
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 80
-- On chamada shift to state 48

State 34:
expressao -> LITSTRING . [ VIRG PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR EXPOENTE E DOISPONTOS DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITSTRING 
-- On PONTOVIRG reduce production expressao -> LITSTRING 
-- On OU reduce production expressao -> LITSTRING 
-- On MULTIPLICA reduce production expressao -> LITSTRING 
-- On MODULO reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On EXPOENTE reduce production expressao -> LITSTRING 
-- On E reduce production expressao -> LITSTRING 
-- On DOISPONTOS reduce production expressao -> LITSTRING 
-- On DIVIDE reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 

State 35:
expressao -> LITREAL . [ VIRG PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR EXPOENTE E DOISPONTOS DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITREAL 
-- On PONTOVIRG reduce production expressao -> LITREAL 
-- On OU reduce production expressao -> LITREAL 
-- On MULTIPLICA reduce production expressao -> LITREAL 
-- On MODULO reduce production expressao -> LITREAL 
-- On MENOS reduce production expressao -> LITREAL 
-- On MENORIGUAL reduce production expressao -> LITREAL 
-- On MENOR reduce production expressao -> LITREAL 
-- On MAIS reduce production expressao -> LITREAL 
-- On MAIORIGUAL reduce production expressao -> LITREAL 
-- On MAIOR reduce production expressao -> LITREAL 
-- On IGUAL reduce production expressao -> LITREAL 
-- On FPAR reduce production expressao -> LITREAL 
-- On EXPOENTE reduce production expressao -> LITREAL 
-- On E reduce production expressao -> LITREAL 
-- On DOISPONTOS reduce production expressao -> LITREAL 
-- On DIVIDE reduce production expressao -> LITREAL 
-- On DIFERENTE reduce production expressao -> LITREAL 

State 36:
expressao -> LITINT . [ VIRG PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR EXPOENTE E DOISPONTOS DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITINT 
-- On PONTOVIRG reduce production expressao -> LITINT 
-- On OU reduce production expressao -> LITINT 
-- On MULTIPLICA reduce production expressao -> LITINT 
-- On MODULO reduce production expressao -> LITINT 
-- On MENOS reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On EXPOENTE reduce production expressao -> LITINT 
-- On E reduce production expressao -> LITINT 
-- On DOISPONTOS reduce production expressao -> LITINT 
-- On DIVIDE reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 

State 37:
expressao -> LITCHAR . [ VIRG PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR EXPOENTE E DOISPONTOS DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITCHAR 
-- On PONTOVIRG reduce production expressao -> LITCHAR 
-- On OU reduce production expressao -> LITCHAR 
-- On MULTIPLICA reduce production expressao -> LITCHAR 
-- On MODULO reduce production expressao -> LITCHAR 
-- On MENOS reduce production expressao -> LITCHAR 
-- On MENORIGUAL reduce production expressao -> LITCHAR 
-- On MENOR reduce production expressao -> LITCHAR 
-- On MAIS reduce production expressao -> LITCHAR 
-- On MAIORIGUAL reduce production expressao -> LITCHAR 
-- On MAIOR reduce production expressao -> LITCHAR 
-- On IGUAL reduce production expressao -> LITCHAR 
-- On FPAR reduce production expressao -> LITCHAR 
-- On EXPOENTE reduce production expressao -> LITCHAR 
-- On E reduce production expressao -> LITCHAR 
-- On DOISPONTOS reduce production expressao -> LITCHAR 
-- On DIVIDE reduce production expressao -> LITCHAR 
-- On DIFERENTE reduce production expressao -> LITCHAR 

State 38:
expressao -> LITBOOL . [ VIRG PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR EXPOENTE E DOISPONTOS DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITBOOL 
-- On PONTOVIRG reduce production expressao -> LITBOOL 
-- On OU reduce production expressao -> LITBOOL 
-- On MULTIPLICA reduce production expressao -> LITBOOL 
-- On MODULO reduce production expressao -> LITBOOL 
-- On MENOS reduce production expressao -> LITBOOL 
-- On MENORIGUAL reduce production expressao -> LITBOOL 
-- On MENOR reduce production expressao -> LITBOOL 
-- On MAIS reduce production expressao -> LITBOOL 
-- On MAIORIGUAL reduce production expressao -> LITBOOL 
-- On MAIOR reduce production expressao -> LITBOOL 
-- On IGUAL reduce production expressao -> LITBOOL 
-- On FPAR reduce production expressao -> LITBOOL 
-- On EXPOENTE reduce production expressao -> LITBOOL 
-- On E reduce production expressao -> LITBOOL 
-- On DOISPONTOS reduce production expressao -> LITBOOL 
-- On DIVIDE reduce production expressao -> LITBOOL 
-- On DIFERENTE reduce production expressao -> LITBOOL 
